Añadido chat y correción mejoras feedback

--- a/src/main/resources/templates/atencionCliente.html
+++ b/src/main/resources/templates/atencionCliente.html
@@ -4,9 +4,11 @@
 <head>
     <th:block th:replace="fragments/head :: header" />
     <title>FilmAdmin</title>
+    <script async type="text/javascript" th:src="@{/js/funcionesMensajes.js}"></script>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" onload="loadMessages()">
+
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
@@ -25,18 +27,12 @@
                       <span class="p-1 bold ms-auto">Chat con Cliente 1</span>
                       <button type="button" class="btn-close btn-close-white ms-auto me-2" aria-label="Close"></button>
                     </div>
-                    <div class="mensajes mb-3">
-                      <div class="d-flex justify-content-end"><div class="mb-2"><span class="bold">user:</span> hola buenas quería saber el horario del cine plaza rio 2</div></div>
-                      <div class="mb-2"><span class="bold">Filmadmin:</span> El horario es de 10:00 a 22:00 todos los días de la semana</div>
-                      <div class="d-flex justify-content-end"><div class="mb-2"><span class="bold">user:</span> perfecto, muchas gracias</div></div>
-                      <div class="mb-2"><span class="bold">Filmadmin:</span> ¿Desea algo más?</div>
-                      <div class="d-flex justify-content-end"><div class="mb-2"><span class="bold">user:</span> el centro comercial cuenta con parking?</div></div>
-                      <div class="mb-2"><span class="bold">Filmadmin:</span> Así es. Funciona en el mismo horario que el resto de servicios.</div>
-                      <div class="d-flex justify-content-center mt-4"><div>user está escribiendo...</div></div>
+                    <div class="mensajes mb-3" id="mensajes">
+                      <!-- <div class="d-flex justify-content-center mt-4"><div>user está escribiendo...</div></div> -->
                     </div>
-                    <form class="d-flex flex-column">
-                      <textarea></textarea>
-                      <button type="button" class="btn btn-dark mt-3">Enviar</button>
+                    <form class="d-flex flex-column" method="POST" id="messageform" onsubmit="enviarMensajeUser(event)">
+                      <textarea id="message"></textarea>
+                      <button class="btn btn-dark mt-3" type="submit" id="sendmsg">Enviar</button>
                     </form>
                   </div>
                   <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
