--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -66,7 +66,7 @@
                             <li class="nav-item me-3">
                                 <a class="nav-link" th:href="@{/user/{id}(id=${session.u.id})}">
                                     <img class="iwthumb rounded" th:src="@{/user/{id}/pic(id=${session.u.id})}">
-                                    <span class="text-light" th:text="${session.u.username}">Pepe</span>
+                                    <span class="text-light" id="username" th:text="${session.u.username}">Pepe</span>
                                 </a>
                             </li>
 
